# xcat

./: Cargo.toml  PROMPT.md  README.md
.github/workflows/: release.yml
src/: main.rs
