[package]
name = "xcat"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "xcat"  # This determines the binary name
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
ignore = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
arboard = "3.0"